@startuml ThanhLyHopDong_ClassDiagram
title Class Diagram - UC25: Thanh lý hợp đồng

skinparam {
    ClassBackgroundColor White
    ArrowColor #2D3E50
    ClassBorderColor #2D3E50
    DefaultFontName "Arial"
    DefaultFontSize 16
    ClassBorderThickness 2
    StereotypeFontColor #2D3E50
    Padding 5
}

class "ScreenContractTermination" as ContractLiquidationScreen <<boundary>> {
  - lblContractInfo: Label
  - lblRefundInfo: Label
  - btnComplete: Button
  - btnBack: Button
  + show(requestId: string): void
  + loadCalculation(): void
  + btnCompleteClick(): void
}

class "CheckoutRequest" as CheckoutRequest <<control>> {
  - requestId: string
  - userEmail: string
  - rentalFormId: string
  - expectedDate: string
  - status: CheckoutStatus
  - createdAt: string
  + <<static>> getById(requestId: string): CheckoutRequest 
  + <<static>> updateStatus(requestId: string, status: CheckoutStatus): bool
}

class "CheckoutRequestDB" as CheckoutRequestDB <<entity>> {
  + <<static>> getById(id: string): CheckoutRequest
  + <<static>> updateStatus(id: string, status: string): bool
}

class "Rental" as Rental <<control>> {
  - rentalFormId: string
  - userEmail: string
  - roomName: string
  - dormName: string
  - floor: number
  - bedNumbers: string
  - type: string
  - totalAmount: number
  - createdAt: string
  + <<static>> getBedsInfoByRentalFormId(rentalFormId: string): {roomId: string, bedIds: string[]}
}

class "RentalDB" as RentalDB <<entity>> {
  + <<static>> getBedsInfoByRentalFormId(rentalFormId: string): {roomId: string, bedIds: string[]}
}

class "Contract" as Contract <<control>> {
  - contractId: string
  - rentalFormId: string
  - status: ContractStatus
  + <<static>> updateStatus(contractId: string, status: ContractStatus): bool
  + <<static>> getByRentalFormId(rentalFormId: string): Contract 
  + <<static>> getBedsInfoByContractId(contractId: string): {roomId: string, bedIds: string[]}
}

class "ContractDB" as ContractDB <<entity>> {
  + <<static>> updateStatus(id: string, status: string): bool
  + <<static>> getByRentalFormId(rentalFormId: string): Contract
  + <<static>> getBedsInfoByContractId(contractId: string): {roomId
}

class "Room" as Room <<control>> {
  - roomId: string
  + <<static>> updateBedStatus(roomId: string, bedIds: string[], status: string): bool
}

class "RoomDB" as RoomDB <<entity>> {
  + <<static>> markBedsStatus(roomId: string, bedIds: string[], status: string): bool
}

class "RefundCalculation" as RefundCalculation <<control>> {
  - calculationId: string
  - requestId: string
  - rentalFormId: string
  - depositAmount: number
  - finalRefundAmount: number
  + <<static>> getByRequestId(requestId: string): RefundCalculation 
}

class "RefundCalculationDB" as RefundCalculationDB <<entity>> {
  + <<static>> getByRequestId(requestId: string): RefundCalculation
}

ContractLiquidationScreen --> CheckoutRequest
CheckoutRequest --> CheckoutRequestDB
ContractLiquidationScreen --> Contract
Contract --> ContractDB
ContractLiquidationScreen --> Rental
Rental --> RentalDB
ContractLiquidationScreen --> RefundCalculation
RefundCalculation --> RefundCalculationDB
ContractLiquidationScreen --> Room
Room --> RoomDB

@enduml
